Sculpt: Polyline circle indicator changed color #126252

Closed
opened 2024-08-12 22:26:43 +02:00 by TheRedWaxPolice · 3 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-4.3.0-alpha+main.56779c7bb05f-windows.amd64-release
Worked: 4.2

Short description of error
Not sure if this change was intentional or not, but in the polyline tools, the circle that gets bigger and indicates that you're in the "first point zone" to close the shape, the color of it used to be kinda white in 4.2... but now it's black and barely visible (on dark backgrounds) in 4.3...

To reproduce just use any of the polyline tools in sculpt mode and see the color of the circle when closing the shape...

4.2:
4.2.gif

4.3:
4.3.gif

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-4.3.0-alpha+main.56779c7bb05f-windows.amd64-release Worked: 4.2 **Short description of error** Not sure if this change was intentional or not, but in the polyline tools, the circle that gets bigger and indicates that you're in the "first point zone" to close the shape, the color of it used to be kinda white in 4.2... but now it's black and barely visible (on dark backgrounds) in 4.3... To reproduce just use any of the polyline tools in sculpt mode and see the color of the circle when closing the shape... 4.2: ![4.2.gif](/attachments/6a7fbf6b-4f77-4a0c-8e8c-2f32fb9d8455) 4.3: ![4.3.gif](/attachments/d555c8a2-0776-4dec-ac03-75a5d2444be7)
212 KiB
30 KiB
TheRedWaxPolice added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2024-08-12 22:26:43 +02:00

It is white here. Does this happen with factory settings?

It is white here. Does this happen with factory settings?
Richard Antalik added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-08-13 00:15:34 +02:00

@iss Ok, this is weird... It was black before, but now it's changing colors...
Factory settings gives me a blueish color, while in some other themes it is kinda green... 😄
Where this color is coming from? is it a theme setting? I'm never getting white tho...

Factory settings:
image

Custom theme:
image

@iss Ok, this is weird... It was black before, but now it's changing colors... Factory settings gives me a blueish color, while in some other themes it is kinda green... 😄 Where this color is coming from? is it a theme setting? I'm never getting white tho... Factory settings: ![image](/attachments/fb886c06-da48-4ec0-8909-ebdeadc9c92e) Custom theme: ![image](/attachments/505bb043-dd4d-402d-897c-174a25f2470c)
3.8 KiB
2.6 KiB
Member

Ah, this is a mistake in the code; it uses the GPU_SHADER_3D_UNIFORM_COLOR drawing type but doesn't specify a color, so this is likely reading a value that was bound elsewhere. I can make a quick fix for this.

Ah, this is a mistake in the code; it uses the `GPU_SHADER_3D_UNIFORM_COLOR` drawing type but doesn't specify a color, so this is likely reading a value that was bound elsewhere. I can make a quick fix for this.
Sean Kim added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2024-08-13 01:15:41 +02:00
Sean Kim self-assigned this 2024-08-13 01:15:51 +02:00
Jesse Yurkovich added the
Module
Sculpt, Paint & Texture
label 2024-08-13 08:11:42 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-13 21:24:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126252
No description provided.